# agentbeacon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  NOTICE  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml
agentbeacon/: __init__.py
agentbeacon/mock_agent/: __init__.py  a2a_server.py  acp_mode.py  coordination_scenarios.py  demo_scenario.py  special_commands.py  stdio_mode.py
agentmaestro/mock_agent/: __init__.py  __main__.py  acp_mode.py  agent_card.py  config.py  coordination_scenarios.py  demo_scenario.py  file_logger.py  jsonrpc.py  mcp_client.py  showcase_scenario.py  special_commands.py  stdio_mode.py  task_store.py
common/: Cargo.toml
common/src/: a2a.rs  dag.rs  lib.rs  schemas.rs  validation.rs
docs/: a2a-endpoints.md  a2a-task.json  a2a-task.schema.json  a2a-v0.3.0.schema.json  acp-task.json  agents-schema.json  embed.go  registry-api.md  rust-worker-a2a-compliance.md  scheduler-data-model.md  scheduler-sync-response.md  security-cors.md  stdio-task.md  worker-cancellation.md  worker-sync-request.schema.json  worker-sync-response.schema.json  workflow-schema.json  workflow-schema.md
examples/: agents-with-invalid.yaml  agents.yaml  parallel.yaml  simple.yaml  workflow_guardrails_valid.yaml  workflow_invalid_artifact.yaml  workflow_invalid_cycle.yaml  workflow_invalid_duplicate_id.yaml  workflow_invalid_missing_artifact.yaml  workflow_parallel.yaml  workflow_sequential.yaml
executors/: eslint.config.js  package-lock.json  package.json
executors/src/: claude-executor.ts  copilot-executor.ts  mock-claude-sdk.ts  mock-copilot-sdk.ts
npm/lib/: resolve.js
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
python/agentbeacon/: __init__.py  __main__.py  _find_binary.py
scheduler/: Cargo.toml
scheduler/.sqlx/: config.json
scheduler/migrations/: 0001_initial.sql  0002_add_workflow_registry.sql  0002_pg_rename_workspaces_to_projects.sql  0002_rename_workspaces_to_projects.sql  0003_add_msg_seq.sql  0003_add_pending_tasks.sql  0003_pg_add_msg_seq.sql  0004_add_parent_session_index.sql  0004_pg_add_parent_session_index.sql  0005_data_model_split.sql  0005_pg_data_model_split.sql  0006_hierarchy_limits.sql  0006_pg_hierarchy_limits.sql  0007_pg_session_slugs.sql  0007_session_slugs.sql  0008_fix_slug_index.sql  0008_pg_fix_slug_index.sql  0009_pg_wiki.sql  0009_wiki.sql  0010_pg_recovery_attempts.sql  0010_recovery_attempts.sql  0011_drop_coordination_mode.sql  0011_pg_drop_coordination_mode.sql  0012_pg_worktree_to_sessions.sql  0012_worktree_to_sessions.sql  0013_pg_wiki_extras.sql  0013_wiki_extras.sql  0014_dynamic_briefing.sql  0014_pg_dynamic_briefing.sql  0015_mcp_servers.sql  0015_pg_mcp_servers.sql  0016_base_commit_sha.sql  0016_pg_base_commit_sha.sql
scheduler/src/: assets.rs  error.rs  lib.rs  main.rs  search.rs  slugs.rs  supervisor.rs  task_preparation.rs  telemetry.rs
scheduler/src/api/: agent_card.rs  agents.rs  auth.rs  config.rs  docs.rs  drivers.rs  executions.rs  health.rs  jsonrpc.rs  mcp.rs  mcp_servers.rs  mcp_tools.rs  messages.rs  mod.rs  projects.rs  registry.rs  sessions.rs  sse.rs  types.rs  wiki.rs  worker.rs  workflows.rs
scheduler/src/api/handlers/: message_send.rs  mod.rs  registry.rs  tasks_get.rs  worker_sync.rs
scheduler/src/app/: mod.rs
scheduler/src/db/: agents.rs  artifacts.rs  config.rs  drivers.rs  events.rs  execution_agents.rs  execution_events.rs  executions.rs  helpers.rs  mcp_servers.rs  migrations.rs  mod.rs  pending_tasks.rs  pool.rs  project_agents.rs  project_mcp_servers.rs  projects.rs  sessions.rs  task_queue.rs  wiki.rs  workflow_version.rs  workflows.rs  workspaces.rs
scheduler/src/queue/: mod.rs
scheduler/src/registry/: hash.rs  mod.rs  resolver.rs
scheduler/src/scheduling/: assignment.rs  mod.rs  partial_failure.rs  retry.rs  scheduler.rs
scheduler/src/services/: briefing.rs  cascade.rs  crash.rs  execution.rs  mcp.rs  messaging.rs  mod.rs  notification.rs  recovery.rs
scheduler/src/validation/: mod.rs
scheduler/tests/: concurrency_tests.rs  db_operation_tests.rs  error_formatting_tests.rs  schema_validation_tests.rs
scheduler/tests/common/: mod.rs
scripts/: build_npm.py  build_wheel.py  demo-a2a.sh  e2e.sh  manual_e2e.sh  publish.py  seed_agents.py
tests/: conftest.py  test-config-responses.json  test_build_npm.py  test_build_wheel.py  test_musl_binaries.py  test_npm_packaging_integration.py  test_packaging_integration.py  test_publish.py  test_testhelpers_logging.py  test_ui_playwright.py  test_ui_workflow_monitoring.py  testhelpers.py
tests/contract/: test_agent_awareness.py  test_ask_user_batch.py  test_auto_worktree.py  test_crash_detection.py  test_crash_recovery.py  test_db_url_scheme.py  test_ephemeral_streaming.py  test_escalate_batch.py  test_execution_cancel.py  test_execution_complete.py  test_execution_pool.py  test_health.py  test_hierarchy_limits.py  test_initial_prompt_event.py  test_liveness.py  test_manual_recovery.py  test_mcp_ask_user.py  test_mcp_auth.py  test_mcp_delegate.py  test_mcp_escalate.py  test_mcp_handoff.py  test_mcp_next_instruction.py  test_mcp_poll_cleanup.py  test_mcp_release.py  test_mcp_tools_list.py  test_messaging.py  test_multimodal_input.py  test_ready.py  test_rest_agents.py  test_rest_agents_crud.py  test_rest_drivers.py  test_rest_executions.py  test_rest_executions_enhanced.py  test_rest_mcp_servers.py  test_rest_projects.py  test_rest_sessions.py  test_schema.py  test_session_diff.py  test_session_endpoints.py  test_session_lifecycle.py  (+9 more)
tests/contracts/: conftest.py  schema_helpers.py  test_a2a_task_envelope.py  test_acp_task_envelope.py  (+2 more)
web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  vite.config.ts
worker/: Cargo.toml
worker/src/: agent.rs  cli.rs  config.rs  embedded_executors.rs  main.rs  sync.rs
worker/src/acp/: executor.rs  mod.rs  protocol.rs
worker/src/executor/: acp.rs  claude.rs  copilot.rs  mod.rs  sdk.rs
(+277 files in other folders)
