[workspace]
members = [
    "common",
    "scheduler",
    "worker",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# Shared across 2+ crates — single source of truth for versions.
# Crates add per-crate features via `{ workspace = true, features = [...] }`.
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "env"] }
jsonschema = { version = "0.33.0", default-features = false }
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
