[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
fluent-uri = "0.3.2"
jsonschema = "0.33.0"
lazy_static = "1.5.0"
referencing = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
