[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
fluent-uri = "0.3.2"
jsonschema = { workspace = true, features = ["resolve-file"] }
lazy_static = "1.5.0"
referencing = "0.33.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
