[package]
name = "scheduler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentbeacon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = "0.8.6"
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
common = { path = "../common" }
futures-util = "0.3"
hex = "0.4"
jsonschema.workspace = true
regex = "1.11"
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlparser = "0.58"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls-ring-webpki", "macros", "migrate", "chrono"] }
thiserror.workspace = true
tantivy = "0.25"
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["cors", "compression-gzip"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
rand = "0.8.5"
uuid = { workspace = true, features = ["serde"] }
nix = { version = "0.30.1", features = ["signal"] }
mimalloc = "0.1"
