[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agentbeacon-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
common = { version = "0.1.0", path = "../common" }
humantime = "2.3.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4.4"
