[package]
name = "worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentbeacon-worker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
clap.workspace = true
common = { path = "../common" }
humantime = "2.3.0"
libc = "0.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "system-proxy"] }
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dirs = "6"
mimalloc = "0.1"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3"
